fix(LayoutToggleButton): Fixed spacing between icon and text in LayoutToggleButton that was too large

--- a/src/style/DropdownMenu.scss
+++ b/src/style/DropdownMenu.scss
@@ -37,3 +37,7 @@
 #layout-toggle-button-disabled > a {
     color: var(--bs-secondary);
 }
+
+#layout-toggle-button > a {
+    padding-left: 0.5rem;
+}
